Correction de la documentation